# observability-poc

./: .gitignore  README.md  flake.nix
app/: .envrc  Dockerfile  app.py  pyproject.toml
terraform/: .terraform.lock.hcl  data.tf  justfile  locals.tf  main.tf  providers.tf  variables.tf
terraform-poc/: .terraform.lock.hcl  locals.tf  main.tf  variables.tf
terraform-poc/modules/gke/: main.tf  outputs.tf  variables.tf
terraform-poc/modules/networking/: main.tf
terraform/k8s/values/: gatus.yaml
terraform/modules/compute/: main.tf  providers.tf  variables.tf
terraform/modules/compute/ansible/: playbook.yaml  requirements.yaml
terraform/modules/compute/docker/: docker-compose.yaml  gatus.yaml  traefik.yaml
terraform/modules/compute/scripts/: init_vm.sh
terraform/modules/gke/: data.tf  helm.tf  locals.tf  main.tf  outputs.tf  providers.tf  variables.tf
terraform/modules/gke/deployments/: app.tf  app_with_ingress.tf  app_without_ingress.tf  cert-manager.tf  gatus.tf  ingress.tf  locals.tf  loki.tf  main.tf  opentelemetry-collector.tf  prometheus.tf  promtail.tf  providers.tf  variables.tf
terraform/modules/gke/deployments/app_with_ingress/: main.tf
terraform/modules/gke/deployments/app_without_ingress/: main.tf
terraform/modules/gke/deployments/manifests/: cert-manager.yaml
terraform/modules/gke/deployments/values/: gatus.yaml  loki.yaml  nginx.yaml  otel.yaml  (+2 more)
terraform/modules/gke/manifests/: cert-manager.yaml
terraform/modules/gke/values/: loki.yaml  nginx.yaml  prometheus.yaml
terraform/modules/networking/: firewall.tf  main.tf  outputs.tf
